assets/styles/home.css
@import 'variables.css';
@import 'partials/_acier-font-face.css';

.container {
	margin: 0 auto;
	padding-bottom: constant(safe-area-inset-bottom);
	padding-bottom: env(safe-area-inset-bottom);
}

.header-image {
	animation: header-image 1s ease-out 300ms backwards;
	width: 100%;
	width: calc(100% - var(--space-l2));
	height: auto;
	box-shadow: 0 0 55px 0 rgba(83, 108, 104, 0.6);
	margin-bottom: -2.75rem;

	@media (prefers-reduced-motion: reduce) {
		animation: none;
	}

	@media (prefers-color-scheme: dark) {
		box-shadow: 0 0 55px 0 rgba(0, 0, 0, 0.9);
	}
}

header {
	padding-bottom: var(--space-l3);
}

.name,
.tagline {
	padding-right: var(--space-l2);
	margin: 0;
}

.name {
	z-index: 1; /* Fixes some overlapping issues during animations. (WebKit) */
	font: normal 7em/0.7 'acier-bat', var(--font-fam);
	text-align: right;
	padding-left: 0;

	.first,
	.last {
		animation: name-first 1s ease-out 300ms backwards;
		display: block;

		@media (prefers-reduced-motion: reduce) {
			animation: none;
		}
	}

	.first {
		animation-name: name-first;
		filter: drop-shadow(0 2px 12px rgba(0, 153, 204, 0.5));
		color: var(--blue);
	}

	.last {
		animation-name: name-last;
		filter: drop-shadow(0 2px 12px rgba(83, 195, 202, 0.5));
		color: var(--turquoise);
	}
}

.tagline {
	font: 600 2em/1.5 var(--font-fam);
	text-align: right;
	list-style: none;

	li {
		animation: tagline 1s ease-out backwards;
		position: relative;
		z-index: 0;

		&:nth-child(1) {
			animation-delay: 600ms;
		}

		&:nth-child(2) {
			animation-delay: 900ms;
		}

		&:nth-child(3) {
			animation-delay: 1200ms;
		}

		@media (prefers-reduced-motion: reduce) {
			animation: none;
		}
	}
}

section,
footer {
	line-height: 1.5;
}

section {
	font-size: 1.25em;
	padding: var(--space-l3) var(--space-l2);
	border-top: 3px solid var(--divider-color);

	p {
		margin: 0;
	}

	abbr {
		cursor: help;
		text-decoration: underline;
	}
}

footer {
	color: var(--secondary-text-color);
	padding: 0 var(--space-l2) var(--space-l1);
	margin-top: -1.5rem;
}

section p a,
footer a {
	color: inherit;
	text-decoration: underline;

	@media (any-hover) {
	&:hover {
		color: var(--blue);
	}

	&:active {
		color: var(--blue-secondary);
	}
	}
}

/* Navigation button style. */
nav a {
	transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
	display: inline-block;
	font-weight: 600;
	color: var(--blue);
	background-color: var(--action-background-l1);
	padding: 0 var(--space-l1);
	border-radius: 5px;
	border: 0.07em solid transparent;
	white-space: nowrap;

	&::after {
		transition: border-color 0.3s ease, margin-left 0.3s ease, transform 0.3s ease, top 0.3s ease;
		content: '';
		display: inline-block;
		transform: rotate(45deg); /* Point arrow right. */
		transform-origin: center;
		position: relative;
		height: 0.45em;
		width: 0.45em;
		vertical-align: top;
		border-style: solid;
		border-width: 0.1em 0.1em 0 0;
		border-color: transparent;
		border-radius: 1px;
	}

	@media (any-hover) {
	&:hover {
		color: var(--blue);
		background-color: var(--action-background-l2);

		&::after {
			border-color: var(--blue);
			margin-left: 0.1em;
		}
	}

	&:active {
		color: var(--blue-secondary);
		background-color: var(--action-background-l3);


		&::after {
			border-color: var(--blue-secondary);
			margin-left: 0.1em;
		}
	}
	}

	&:focus {
		color: var(--blue-secondary);
		background-color: var(--action-background-l3);
		border-color: var(--blue-secondary);
		outline: none;

		&::after {
			border-color: var(--blue-secondary);
			margin-left: 0.1em;
		}
	}
}

/* Styles only pertaining to these buttons. */
nav {
	display: flex;
	flex-flow: wrap;
	font-size: 1.65rem;
	margin: 0 auto var(--space-l2);

	a {
		margin-right: var(--space-l1);
		margin-bottom: var(--space-l1);

		&::after {
			top: 0.55em;
			left: 0;
			margin-left: -0.35em;
		}
	}
}

button.colophon-extender {
	transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease, padding 0.3s ease;
	font-size: 1.15rem;
	color: var(--blue);
	background: none;
	cursor: pointer;
	padding: 0;
	border-radius: 5px;
	border: 0.09em solid transparent;
	margin: var(--space-l1) 0 0;

	&::after {
		transition: border-color 0.3s ease, margin-left 0.3s ease, transform 0.3s ease, top 0.3s ease;
		content: '';
		display: inline-block;
		transform: rotate(135deg); /* Chevron pointing down. */
		transform-origin: center;
		position: relative;
		height: 0.45em;
		width: 0.45em;
		top: 0.35em;
		left: 0.25em;
		vertical-align: top;
		border-style: solid;
		border-width: 0.125em 0.125em 0 0;
		border-color: var(--blue);
		border-radius: 1px;
	}

	&::before {
		content: '';
		border-top: 3px solid var(--divider-color);
	}

	&.shown::after {
		transform: rotate(-45deg); /* Chevron pointing up. */
		top: 0.55em;
	}

	@media (any-hover) {
	&:hover {
		color: var(--blue-secondary);

		&::after {
			border-color: var(--blue-secondary);
		}
	}

	&:active {
		color: var(--blue-secondary);

		&::after {
			border-color: var(--blue-secondary);
		}
	}
	}

	&:focus {
		color: var(--blue-secondary);
		background-color: var(--action-background-l3);
		padding: 0.15em 0.75em 0.25em 0.35em;
		border-color: var(--blue-secondary);
		outline: none;

		&::after {
			border-color: var(--blue-secondary);
		}
	}


	html.no-js & {
		display: none;
	}
}

.colophon-extended {
	overflow: hidden;
	font-size: 1.15rem;
	color: var(--secondary-text-color);
	max-height: 0;
	margin-top: 0;

	&.shown {
		transition-timing-function: ease-in;
		max-height: 100rem;
		margin-top: var(--space-l1);
	}

	html.js & {
		transition: max-height 0.3s ease-out, margin-top 0.3s ease-out; /* Prevents transition from showing on page load. */
	}

	html.no-js & {
		overflow: auto;
		max-height: none;
		margin-top: var(--space-l2);
	}

	ul {
		padding: 0;
		margin: var(--space-l3) 0 var(--space-l1);
	}

	li {
		display: flex;
		align-items: center;
		margin-bottom: var(--space-l2);

		@media (--width-l3) {
			margin-bottom: var(--space-l3);
		}

		img {
			width: 4rem;
			height: 4rem;
			object-fit: contain;
			margin-right: var(--space-l2);

			@media (--width-l3) {
				margin-right: var(--space-l3);
			}
		}
	}
}

.social {
	p {
		color: var(--secondary-text-color);
	}

	.icons {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-items: flex-start;
		list-style: none;
		margin-top: var(--space-l2);
	}

	.link {
		display: inline;
		margin-right: 5%;

		&:last-child {
			margin-right: 0;
		}
	}

	.icon {
		width: 100%;
		max-width: 4.25rem;
		backface-visibility: visible;

		@media (any-hover) {
		&:hover {
			animation: social-icon 0.5s ease;
		}
		}
	}
}

@media (min-width: 22em) {
	.header-image {
		width: calc(100% - var(--space-l3));
	}

	.tagline {
		padding-right: var(--space-l3);
	}

	.name {
		padding-right: calc(var(--space-l2) - 0.25rem);
		font-size: 8.5em;
	}

	.icons {
		max-width: calc(4 * 5rem); /* Allow 5 rems per icon. */
	}
}

@media (min-width: 26em) {
	nav {
		font-size: 2rem;
		flex-flow: nowrap;

		a {
			padding: 0 var(--space-l2);
			margin-right: var(--space-l2);
		}
	}
}

@media (--width-l2) {
	header,
	section,
	footer {
		margin-right: var(--space-l3);
		margin-left: var(--space-l3);
	}

	header {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-items: baseline;
	}

	.name,
	.tagline {
		padding: 0;
	}

	.name {
		margin-left: 0;
	}

	section,
	footer {
		padding-right: 0;
		padding-left: 0;
		font-size: 1.5em;
	}

	.social p,
	footer {
		font-size: 1.15rem;
	}

	.social .icon {
		max-width: 3.5rem;
	}
}

@media (--width-l3) {
	.container {
		max-width: 35em;
	}

	.header-image {
		display: block;
		max-width: 100%;
		width: auto;
		margin: 0 auto -2.1rem;
	}

	header,
	section,
	footer {
		max-width: 100%;
		margin-right: auto;
		margin-left: auto;
	}
}

@media (max-height: 27.5em) {
	.header-image {
		width: auto;
		max-height: 60vh;
		margin-left: 0;
	}
}

/* ----------------- */
/*     Animations    */
/* ----------------- */
@media (prefers-reduced-motion: reduce) {
	.header-image,
	.name .first,
	.name .last,
	.tagline li {
		animation: none;
	}
}

@keyframes header-image {
	from {
		opacity: 0;
		transform: translateX(7.5%) translateY(-25%);
	}
	60% {
		opacity: 1;
		transform: translateX(0);
	}
	to {
		transform: translateX(0) translateY(0);
	}
}

@keyframes name-first {
	from {
		opacity: 0;
		transform: translateX(5%) translateY(15%);
	}
	60% {
		opacity: 1;
		transform: translateX(0);
	}
	to {
		opacity: 1;
		transform: translateX(0) translateY(0);
	}
}

@keyframes name-last {
	from {
		opacity: 0;
		transform: translateX(10%) translateY(30%);
	}
	60% {
		opacity: 1;
		transform: translateX(0);
	}
	to {
		opacity: 1;
		transform: translateX(0) translateY(0);
	}
}

@keyframes tagline {
	from {
		opacity: 0;
		transform: translateX(-5%) translateY(-15%);
	}
	60% {
		opacity: 1;
		transform: translateX(0);
	}
	to {
		opacity: 1;
		transform: translateX(0) translateY(0);
	}
}

@keyframes social-icon {
	from {
		transform: scale(1, 1);
	}
	30% {
		transform: scale(1.25, 0.75);
	}
	40% {
		transform: scale(0.75, 1.25);
	}
	50% {
		transform: scale(1.15, 0.85);
	}
	65% {
		transform: scale(0.95, 1.05);
	}
	75% {
		transform: scale(1.05, 0.95);
	}
	to {
		transform: scale(1, 1);
	}
}

